# pokemon-simulator

./: .gitignore  CMakeLists.txt  main.cpp
csv/: data_manager.py
headers/data/: Type.h
headers/data/items/: ItemEntry.h
headers/data/moves/: Category.h  MoveDex.h  MoveEntry.h
headers/data/pokemons/: PokemonDex.h  PokemonEntry.h  Statistics.h
headers/entities/pokemons/: MainStatus.h  Nature.h  Pokemon.h
headers/entities/trainer/: Trainer.h
headers/fight/: Fight.h  PokemonInFight.h  VolatileStatus.h
headers/utils/: CsvReader.h
src/data/items/: ItemEntry.cpp
src/data/moves/: MoveDex.cpp  MoveEntry.cpp
src/data/pokemons/: PokemonDex.cpp  PokemonEntry.cpp
src/entities/pokemons/: Pokemon.cpp
src/entities/trainer/: Trainer.cpp
src/fight/: Fight.cpp  PokemonInFight.cpp
src/utils/: CsvReader.cpp
